--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -349,6 +349,6 @@ jobs:
       - name: Show Ignored Packages
         run: cat ./.ci/ignoredPackages.json
       - name: Restore Solution
-        run: dotnet restore ./Backbone.sln
+        run: dotnet restore /p:ContinuousIntegrationBuild=true ./Backbone.sln
       - name: Validate Licenses
         run: nuget-license --input ./Backbone.sln --allowed-license-types ./.ci/allowedLicenses.json --ignored-packages ./.ci/ignoredPackages.json --output table --error-only
