--- a/Modules/Directory.Build.targets
+++ b/Modules/Directory.Build.targets
@@ -1,8 +1,6 @@
 <Project>
-
-    <ItemGroup Condition="'$(Configuration)' == 'Release' And !$(MSBuildProjectFile.Contains('Tests.csproj'))">
-        <Compile Remove="**\*Tests.cs" />
-        <Compile Remove="TestHelpers\*" />
-    </ItemGroup>
-    
+    <PropertyGroup Condition="'$(Configuration)' == 'Release' And !$(MSBuildProjectFile.Contains('Tests.csproj'))">
+        <DefaultItemExcludes>$(DefaultItemExcludes);**/*Tests.cs</DefaultItemExcludes>
+        <DefaultItemExcludes>$(DefaultItemExcludes);**/*TestHelpers\*</DefaultItemExcludes>
+    </PropertyGroup>
 </Project>
