Unit Tests Next to Production Code - Relationships (#744)
* refactor: unit tests next to production code for relationships module

* fix: add exceptions for cleanup and cli

* refactor: add file nesting and rename test files

* chore: update solution file to remove test folder

* refactor: remove test helpers from release build and adjust namespaces

* test: fix test class not extending AbstractTestsBase

* chore: add reference to github actions logger for debug builds

* refactor: named parameters

* refactor: revert removel of named parameters

* refactor: only include test references in relationship projects

* refactor: add explanatory comment

* refactor: use default item excludes instead of Compile Remove

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/Modules/Directory.Build.props
+++ b/Modules/Directory.Build.props
@@ -12,4 +12,22 @@
             CS8777,CS8819,CS8824,CS8825,CS8847
         </WarningsAsErrors>
     </PropertyGroup>
+
+    <!-- Relationships Module is currently the only one with its respective unit tests next to the production (within the same project, as opposed to on a separate one) -->
+    <ItemGroup Condition="'$(Configuration)' != 'Release' And $(MSBuildProjectFile.Contains('Relationships'))">
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(Configuration)' != 'Release' And $(MSBuildProjectFile.Contains('Relationships'))">
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+        <PackageReference Include="GitHubActionsTestLogger" Version="2.4.1">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
+    
 </Project>
