refactor: Updated K8s/Helm manifests for common secrets
Added "common secrets" environment variables in global section of values.yaml
and an override option for each service in their respective deployment.yaml or (cron)job.yaml files.

--- a/helm/templates/actualidentitydeletion/cronjob.yaml
+++ b/helm/templates/actualidentitydeletion/cronjob.yaml
@@ -63,7 +63,9 @@ spec:
                       name: rabbitmq-password
                       key: "VALUE" 
                 {{- end }}
-                {{- with .Values.actualidentitydeletion.env }}
+                {{- $globalEnv := .Values.global.env | default (dict) }}
+                {{- $actualidentitydeletionEnv := .Values.actualidentitydeletion.env | default (dict) }}
+                {{- with merge $globalEnv $actualidentitydeletionEnv }} 
                 {{- toYaml . | nindent 16 }}
                 {{- end }}
           {{- with .Values.actualidentitydeletion.nodeSelector }}
