--- a/helm/templates/sendidentitydeletionreminders/cronjob.yaml
+++ b/helm/templates/sendidentitydeletionreminders/cronjob.yaml
@@ -66,7 +66,9 @@ spec:
                       name: rabbitmq-password
                       key: "VALUE" 
                 {{- end }}
-                {{- with .Values.sendidentitydeletionreminders.env }}
+                {{- $globalEnv := .Values.global.env | default (dict) }}
+                {{- $sendidentitydeletionremindersEnv := .Values.sendidentitydeletionreminders.env | default (dict) }}
+                {{- with merge $globalEnv $sendidentitydeletionremindersEnv }}
                 {{- toYaml . | nindent 16 }}
                 {{- end }}
           {{- with .Values.sendidentitydeletionreminders.nodeSelector }}
