--- a/helm/templates/sseserver/deployment.yaml
+++ b/helm/templates/sseserver/deployment.yaml
@@ -66,10 +66,22 @@ spec:
               subPath: appsettings.override.json
               readOnly: true
           env:
-            {{- $globalEnv := .Values.global.env | default (dict) }}
-            {{- $sseserverEnv := .Values.sseserver.env | default (dict) }}
-            {{- with merge $globalEnv $sseserverEnv }}
-            {{- toYaml . | nindent 12 }}
+            {{- $arg0 := default (list) (.Values.global.env) }}
+            {{- $arg1 := default (list) (.Values.sseserver.env) }}
+            {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
+            {{- $adminuiEnvMap := include "listToMap" $arg1 | fromYaml }}
+            {{- $mergedEnvMap := merge $adminuiEnvMap $globalEnvMap }}
+            {{- $mergedEnvList := include "mapToList" $mergedEnvMap }}
+            {{- range $item := $mergedEnvMap }}
+            - name: {{ $item.name }}
+                {{- if $item.value }}
+              value: {{ $item.value }}
+                {{- else if $item.valueFrom }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $item.valueFrom.secretKeyRef.name }}
+                  key: {{ $item.valueFrom.secretKeyRef.key }}
+            {{- end }}
             {{- end }}
           livenessProbe:
             httpGet:
