--- a/helm/templates/databasemigrator/job.yaml
+++ b/helm/templates/databasemigrator/job.yaml
@@ -51,10 +51,22 @@ spec:
               subPath: appsettings.override.json
               readOnly: true
           env:
-            {{- $globalEnv := .Values.global.env | default (dict) }}
-            {{- $databasemigratorEnv := .Values.databasemigrator.env | default (dict) }}
-            {{- with merge $globalEnv $databasemigratorEnv }}
-            {{- toYaml . | nindent 12 }}
+            {{- $arg0 := default (list) (.Values.global.env) }}
+            {{- $arg1 := default (list) (.Values.databasemigrator.env) }}
+            {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
+            {{- $adminuiEnvMap := include "listToMap" $arg1 | fromYaml }}
+            {{- $mergedEnvMap := merge $adminuiEnvMap $globalEnvMap }}
+            {{- $mergedEnvList := include "mapToList" $mergedEnvMap }}
+            {{- range $item := $mergedEnvMap }}
+            - name: {{ $item.name }}
+            {{- if $item.value }}
+              value: {{ $item.value }}
+            {{- else if $item.valueFrom }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $item.valueFrom.secretKeyRef.name }}
+                  key: {{ $item.valueFrom.secretKeyRef.key }}
+            {{- end }}
             {{- end }}
       {{- with .Values.databasemigrator.nodeSelector }}
       nodeSelector:
