--- a/helm/templates/adminui/deployment.yaml
+++ b/helm/templates/adminui/deployment.yaml
@@ -94,7 +94,22 @@ spec:
                   name: rabbitmq-password
                   key: "VALUE" 
             {{- end }}
-            {{ include "mergeAndRenderEnv2" (list .Values.global.env .Values.adminui.env) }}
+            {{- $arg0 := default (list) (.Values.global.env) }}
+            {{- $arg1 := default (list) (.Values.adminui.env) }}
+            {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
+            {{- $resourceEnvMap := include "listToMap" $arg1 | fromYaml }}
+            {{- $mergedEnvMap := merge $resourceEnvMap $globalEnvMap }}
+            {{- range $item := $mergedEnvMap }}
+              - name: {{ $item.name }}
+            {{- if $item.value }}
+                value: {{ $item.value }}
+            {{- else if $item.valueFrom }}
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ $item.valueFrom.secretKeyRef.name }}
+                    key: {{ $item.valueFrom.secretKeyRef.key }}
+            {{- end }}
+            {{- end }}
       {{- with .Values.adminui.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
