--- a/helm/templates/consumerapi/deployment.yaml
+++ b/helm/templates/consumerapi/deployment.yaml
@@ -81,18 +81,17 @@ spec:
             {{- $arg0 := default (list) (.Values.global.env) }}
             {{- $arg1 := default (list) (.Values.consumerapi.env) }}
             {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
-            {{- $adminuiEnvMap := include "listToMap" $arg1 | fromYaml }}
-            {{- $mergedEnvMap := merge $adminuiEnvMap $globalEnvMap }}
-            {{- $mergedEnvList := include "mapToList" $mergedEnvMap }}
+            {{- $resourceEnvMap := include "listToMap" $arg1 | fromYaml }}
+            {{- $mergedEnvMap := merge $resourceEnvMap $globalEnvMap }}
             {{- range $item := $mergedEnvMap }}
-            - name: {{ $item.name }}
+              - name: {{ $item.name }}
             {{- if $item.value }}
-              value: {{ $item.value }}
+                value: {{ $item.value }}
             {{- else if $item.valueFrom }}
-              valueFrom:
-                secretKeyRef:
-                  name: {{ $item.valueFrom.secretKeyRef.name }}
-                  key: {{ $item.valueFrom.secretKeyRef.key }}
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ $item.valueFrom.secretKeyRef.name }}
+                    key: {{ $item.valueFrom.secretKeyRef.key }}
             {{- end }}
             {{- end }}
           livenessProbe:
