--- a/helm/templates/databasemigrator/job.yaml
+++ b/helm/templates/databasemigrator/job.yaml
@@ -54,14 +54,13 @@ spec:
             {{- $arg0 := default (list) (.Values.global.env) }}
             {{- $arg1 := default (list) (.Values.databasemigrator.env) }}
             {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
-            {{- $adminuiEnvMap := include "listToMap" $arg1 | fromYaml }}
-            {{- $mergedEnvMap := merge $adminuiEnvMap $globalEnvMap }}
-            {{- $mergedEnvList := include "mapToList" $mergedEnvMap }}
+            {{- $resourceEnvMap := include "listToMap" $arg1 | fromYaml }}
+            {{- $mergedEnvMap := merge $resourceEnvMap $globalEnvMap }}
             {{- range $item := $mergedEnvMap }}
             - name: {{ $item.name }}
             {{- if $item.value }}
               value: {{ $item.value }}
-            {{- else if $item.valueFrom }}
+              {{- else if $item.valueFrom }}
               valueFrom:
                 secretKeyRef:
                   name: {{ $item.valueFrom.secretKeyRef.name }}
