--- a/helm/templates/sseserver/deployment.yaml
+++ b/helm/templates/sseserver/deployment.yaml
@@ -66,22 +66,7 @@ spec:
               subPath: appsettings.override.json
               readOnly: true
           env:
-            {{- $arg0 := default (list) (.Values.global.env) }}
-            {{- $arg1 := default (list) (.Values.sseserver.env) }}
-            {{- $globalEnvMap := include "listToMap" $arg0 | fromYaml }}
-            {{- $resourceEnvMap := include "listToMap" $arg1 | fromYaml }}
-            {{- $mergedEnvMap := merge $resourceEnvMap $globalEnvMap }}
-            {{- range $item := $mergedEnvMap }}
-            - name: {{ $item.name }}
-            {{- if $item.value }}
-              value: {{ $item.value }}
-              {{- else if $item.valueFrom }}
-              valueFrom:
-                secretKeyRef:
-                  name: {{ $item.valueFrom.secretKeyRef.name }}
-                  key: {{ $item.valueFrom.secretKeyRef.key }}
-            {{- end }}
-            {{- end }}
+            {{- include "generateEnvVars" (list .Values.global.env .Values.sseserver.env) | nindent 12 }}
           livenessProbe:
             httpGet:
               path: /health
