Helm Chart: Allow to configure common secrets (#798)
* refactor: Updated K8s/Helm manifests for common secrets

Added "common secrets" environment variables in global section of values.yaml
and an override option for each service in their respective deployment.yaml or (cron)job.yaml files.

* refactor: merge envs draft

* refactor: working solution (unoptimized)

* refactor: attempt with single helper method

* refactor: applied working solution to all resources

* refactor: moved into single template function

* ci: checkout main branchof runtime repo instead of release/v5

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Timo Notheisen <timo.notheisen@js-soft.com>

--- a/helm/templates/admincli/deployment.yaml
+++ b/helm/templates/admincli/deployment.yaml
@@ -43,9 +43,7 @@ spec:
           env:
             - name: Database__Provider
               value: {{ .Values.global.configuration.modules.devices.infrastructure.sqlDatabase.provider }}
-            {{- with .Values.admincli.env }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
+            {{- include "generateEnvVars" (list .Values.global.env .Values.admincli.env) | nindent 12 }}
           tty: true
           command:
             - /bin/bash
