--- a/helm/templates/adminui/deployment.yaml
+++ b/helm/templates/adminui/deployment.yaml
@@ -94,9 +94,7 @@ spec:
                   name: rabbitmq-password
                   key: "VALUE" 
             {{- end }}
-            {{- with .Values.adminui.env }}
-            {{- toYaml . | nindent 12 }}
-            {{- end }}
+            {{- include "generateEnvVars" (list .Values.global.env .Values.adminui.env) | nindent 12 }}
       {{- with .Values.adminui.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
