--- a/BuildingBlocks/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/BuildingBlocks/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -6,6 +6,7 @@
         <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
         <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.16.0" />
         <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="*" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
