--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <SpecFlowObsoleteCodeBehindFiles Remove="Features\SyncRuns\POST - Copy.feature.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.7" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
@@ -41,24 +45,5 @@
         <None Update="specflow.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <SpecFlowFeatureFiles Update="Features\Challenges\POST.feature">
-            <Visible>$(UsingMicrosoftNETSdk)</Visible>
-            <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-        </SpecFlowFeatureFiles>
-        <SpecFlowFeatureFiles Update="Features\Challenges\{id}\GET.feature">
-            <Visible>$(UsingMicrosoftNETSdk)</Visible>
-            <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-        </SpecFlowFeatureFiles>
-        <SpecFlowFeatureFiles Update="Features\Messages\GET.feature">
-          <Visible>$(UsingMicrosoftNETSdk)</Visible>
-          <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-        </SpecFlowFeatureFiles>
-        <SpecFlowFeatureFiles Update="Features\Messages\GET.feature">
-          <Visible>$(UsingMicrosoftNETSdk)</Visible>
-          <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-        </SpecFlowFeatureFiles>
     </ItemGroup>
 </Project>
