--- a/Applications/IdentityDeletionJobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
+++ b/Applications/IdentityDeletionJobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
@@ -18,7 +18,7 @@
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj"/>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Application\BuildingBlocks.Application.csproj"/>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj"/>
-        <ProjectReference Include="..\..\..\..\BuildingBlocks\test\Tooling.Tests\Tooling.Tests.csproj"/>
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\Tooling\Tooling.csproj"/>
         <ProjectReference Include="..\..\..\..\Infrastructure\Infrastructure.csproj"/>
         <ProjectReference Include="..\..\..\..\Modules\Challenges\src\Challenges.Application\Challenges.Application.csproj"/>
         <ProjectReference Include="..\..\..\..\Modules\Challenges\src\Challenges.ConsumerApi\Challenges.ConsumerApi.csproj"/>
