chore: remove wrong reference from Dockerfile

--- a/Applications/IdentityDeletionJobs/src/Job.IdentityDeletion/Dockerfile
+++ b/Applications/IdentityDeletionJobs/src/Job.IdentityDeletion/Dockerfile
@@ -15,8 +15,7 @@ COPY ["Modules/Devices/src/Devices.Infrastructure/Devices.Infrastructure.csproj"
 COPY ["BuildingBlocks/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj", "BuildingBlocks/src/BuildingBlocks.Infrastructure/"]
 COPY ["BuildingBlocks/src/BuildingBlocks.Application.Abstractions/BuildingBlocks.Application.Abstractions.csproj", "BuildingBlocks/src/BuildingBlocks.Application.Abstractions/"]
 COPY ["Modules/Devices/src/Devices.Application/Devices.Application.csproj", "Modules/Devices/src/Devices.Application/"]
-COPY ["BuildingBlocks/src/BuildingBlocks.Application/BuildingBlocks.Application.csproj", "BuildingBlocks/src/Tooling/"]
-COPY ["BuildingBlocks/src/Tooling/Tooling.csproj", "BuildingBlocks/src/BuildingBlocks.Application/"]
+COPY ["BuildingBlocks/src/BuildingBlocks.Application/BuildingBlocks.Application.csproj", "BuildingBlocks/src/BuildingBlocks.Application/"]
 COPY ["Common/src/Common.Infrastructure/Common.Infrastructure.csproj", "Common/src/Common.Infrastructure/"]
 COPY ["BuildingBlocks/src/Crypto/Crypto.csproj", "BuildingBlocks/src/Crypto/"]
 COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
