--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -292,7 +292,13 @@ jobs:
 
       - name: Install runtime dependencies
         working-directory: ./runtime
-        run: npm install
+        run: npm ci
+
+      - name: Build
+        run: npm run build:node
+        env:
+          BUILD_NUMBER: ${{ github.run_number }}
+          COMMIT_HASH: ${{ github.sha }}
 
       - name: Run transport Tests
         working-directory: ./runtime/packages/transport
