--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -296,6 +296,7 @@ jobs:
 
       - name: Build
         run: npm run build:node
+        working-directory: ./runtime
         env:
           BUILD_NUMBER: ${{ github.run_number }}
           COMMIT_HASH: ${{ github.sha }}
