Fix test pipeline by building transport library before running transport tests (#817)
* ci: build runtime in pipeline

* ci: use correct working directory for building runtime

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -292,7 +292,11 @@ jobs:
 
       - name: Install runtime dependencies
         working-directory: ./runtime
-        run: npm install
+        run: npm ci
+
+      - name: Build
+        run: npm run build:node
+        working-directory: ./runtime
 
       - name: Run transport Tests
         working-directory: ./runtime/packages/transport
