--- a/Applications/AdminUi/apps/admin_ui/pubspec.yaml
+++ b/Applications/AdminUi/apps/admin_ui/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  translations_cleaner: ^0.0.5
   very_good_analysis: ^6.0.0
 
 flutter:
