--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -14,7 +14,9 @@
         {
             // the docker images in this list are created and used by our pipelines and can therefore not to be updated by renovate
             matchDatasources: ["docker"],
-            packageNames: ["admin-ui", "event-handler-service", "sse-server", "database-migrator", "admin-cli"],
+            packageNames: ["consumer-api", "admin-ui", "event-handler-service", "sse-server", "database-migrator", "admin-cli"],
+            enabled: false
+        },
             enabled: false
         },
 
