chore: Revert dependency change

--- a/.ci/compose.test.yml
+++ b/.ci/compose.test.yml
@@ -13,7 +13,7 @@ services:
       rabbitmq:
         condition: service_started
       azure-storage-emulator:
-        condition: service_healthy
+        condition: service_started
     configs:
       - source: Config
         target: app/appsettings.override.json
