chore: use new extension in gitignore files

--- a/Applications/AdminApi/src/AdminApi/.gitignore
+++ b/Applications/AdminApi/src/AdminApi/.gitignore
@@ -5,7 +5,8 @@
 *.suo
 *.user
 *.userosscache
-*.sln.docstates
+*.slnx.docstates
+*.slnx.docstates
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
