--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.suo
 *.user
 *.userosscache
-*.sln.docstates
+*.slnx.docstates
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -298,7 +298,7 @@ paket-files/
 
 # JetBrains Rider
 .idea/
-*.sln.iml
+*.slnx.iml
 
 # CodeRush personal settings
 .cr/personal
