feat: add class

--- a/Modules/Announcements/src/Announcements.Domain/Announcements.Domain.csproj
+++ b/Modules/Announcements/src/Announcements.Domain/Announcements.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Domain\BuildingBlocks.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
