--- a/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
+++ b/Applications/ConsumerApi/test/ConsumerApi.Tests.Performance/tools/snapshot-creator-v2/ConsumerApi.Tests.Performance.SnapshotCreator.V2.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="ConsumerApi.Tests.Performance.SnapshotCreater.Tests"/>
+        <InternalsVisibleTo Include="ConsumerApi.Tests.Performance.SnapshotCreator.Tests"/>
     </ItemGroup>
 
     <ItemGroup>
